fix overflow hidden for body;

--- a/src/styles/root.scss
+++ b/src/styles/root.scss
@@ -7,6 +7,12 @@
   box-sizing: border-box;
 }
 
+html {
+  overflow: hidden;
+
+  font-size: 16px;
+}
+
 html,
 body {
   background-color: $bg-color;
@@ -18,8 +24,6 @@ body {
   line-height: 24px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
-  overflow: hidden;
 }
 
 .material-icons {
